--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -11,6 +11,10 @@
         <div class="success">Se ha creado correctamente el usuario {{usuarioCreadoDetalle}}</div>
     {{/if}}
 
+    {{!-- {{#if logoutExitoso}}
+        <div class="mensaje">Se ha creado correctamente el usuario {{usuarioCreadoDetalle}}</div>
+    {{/if}} --}}
+
     <input type="email" name="email" placeholder="email">   
     <input type="password" name="password" placeholder="password">  
     <input type="submit" value="Login">
