listo pasos login vistos en clase

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,5 +1,7 @@
 <h2>Login de usuarios: </h2>
 <hr>
+<a href="/api/sessions/github">Entrar con github</a>
+
 <form action="/api/sessions/login" method="POST">
 
 
