--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -21,5 +21,7 @@
     <input type="password" name="password" placeholder="password">  
     <input type="submit" value="Login">
 </form>
+
+<a href="/loginAdmin">Administrador</a>
    <br>
     {{>menu}}
