listo estilo formAdmin

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -22,6 +22,6 @@
     <input type="submit" value="Login">
 </form>
 
-<a href="/loginAdmin">Administrador</a>
+<a href="/loginAdmin"> Login como Administrador</a>
    <br>
     {{>menu}}
