--- a/src/views/loginAdmin.handlebars
+++ b/src/views/loginAdmin.handlebars
@@ -12,3 +12,7 @@
     <input type="password" name="password" placeholder="password">  
     <input type="submit" value="Login">
 </form>
+
+<br>
+
+<a href="/">Login como Usuario</a>
