--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -4,6 +4,7 @@
 <hr>
 <input type="text" id="mensaje">
 <div id="mensajes"></div>
+<input type="hidden" id="usuario" value="{{usuario.email}}">
 
 
 <br><br>
