--- a/src/views/perfil.handlebars
+++ b/src/views/perfil.handlebars
@@ -4,5 +4,9 @@
 <p>Correo electrónico: <strong>{{usuario.email}}</strong></p>
 <p>ROL: <strong>{{usuario.rol}}</strong></p>
 
+{{#if usuario.github._json.avatar_url}}
+  <img src="{{usuario.github._json.avatar_url}}" alt="Foto de perfil de GitHub">
+{{/if}}
+
 <br>
 {{>menu}}
